use local atlas

--- a/vector-search-lab.ipynb
+++ b/vector-search-lab.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# Retain the quotes (\"\") when pasting the URI\n",
-    "MONGODB_URI = \"<MONGODB_URI>\"\n",
+    "MONGODB_URI = \"mongodb://localhost:27017/?directConnection=true\"\n",
     "# Initialize a MongoDB Python client\n",
     "mongodb_client = MongoClient(MONGODB_URI, appname=\"devrel.workshop.vector_search\")\n",
     "# Check the connection to the server\n",
