--- a/vector-search-lab.ipynb
+++ b/vector-search-lab.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connect to the `DB_NAME` database.\n",
     "# Use the `mongodb_client` instantiated above.\n",
-    "db = <CODE_BLOCK_1>"
+    "db = mongodb_client[DB_NAME]"
    ]
   },
   {
@@ -103,18 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Connect to the `COLLECTION_NAME` collection.\n",
     "# Use the `mongodb_client`, database and collection variables defined above.\n",
-    "collection = <CODE_BLOCK_2>"
+    "collection =db[COLLECTION_NAME]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "{'details': \"localhost:27017: [Errno 111] Connection refused (configured timeouts: socketTimeoutMS: 50000.0ms, connectTimeoutMS: 50000.0ms), Timeout: 50.0s, Topology Description: <TopologyDescription id: 67e331d18d61cce08d8ac429, topology_type: Single, servers: [<ServerDescription ('localhost', 27017) server_type: Unknown, rtt: None, error=AutoReconnect('localhost:27017: [Errno 111] Connection refused (configured timeouts: socketTimeoutMS: 50000.0ms, connectTimeoutMS: 50000.0ms)')>]>\", 'error': 'An unexpected error occurred.'}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcollection\u001b[38;5;241m.\u001b[39mcount_documents({})\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m documents ingested into the books collection.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m     )\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(response\u001b[38;5;241m.\u001b[39mjson())\n",
+      "\u001b[0;31mException\u001b[0m: {'details': \"localhost:27017: [Errno 111] Connection refused (configured timeouts: socketTimeoutMS: 50000.0ms, connectTimeoutMS: 50000.0ms), Timeout: 50.0s, Topology Description: <TopologyDescription id: 67e331d18d61cce08d8ac429, topology_type: Single, servers: [<ServerDescription ('localhost', 27017) server_type: Unknown, rtt: None, error=AutoReconnect('localhost:27017: [Errno 111] Connection refused (configured timeouts: socketTimeoutMS: 50000.0ms, connectTimeoutMS: 50000.0ms)')>]>\", 'error': 'An unexpected error occurred.'}"
+     ]
+    }
+   ],
    "source": [
     "response = requests.post(\n",
     "    url=SERVERLESS_URL, json={\"task\": \"import_vs_data\", \"data\": MONGODB_URI}\n",
